reference/5.1/Microsoft.PowerShell.Core/About/about_Try_Catch_Finally.md
---
description: Describes how to use the `try`, `catch`, and `finally` blocks to handle statement-terminating and script-terminating errors.
Locale: en-US
ms.date: 04/02/2026
online version: https://learn.microsoft.com/powershell/module/microsoft.powershell.core/about/about_try_catch_finally?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Try_Catch_Finally
---
# about_Try_Catch_Finally

## Short description

Describes how to use the `try`, `catch`, and `finally` blocks to handle
statement-terminating and script-terminating errors.

## Long description

Use `try`, `catch`, and `finally` blocks to respond to or handle terminating
errors in scripts. PowerShell has two kinds of terminating errors:

- _statement-terminating_ errors that stop the current statement and
- _script-terminating_ errors that unwind the entire call stack

Both kinds are caught by `try/catch`. You can also use the `trap` statement to
handle terminating errors. For more information, see [about_Trap][05]. For a
comprehensive overview of all error types, see [about_Error_Handling][06].

A statement-terminating error stops the current statement from running, but
PowerShell continues at the next statement unless the error is also
script-terminating. A script-terminating error (such as an error produced by
the `throw` keyword) stops the entire script unless caught by a `try/catch`
block or `trap` statement.

> [!NOTE]
> `$ErrorActionPreference` can suppress `throw`. When set to `SilentlyContinue`
> or `Ignore`, the error doesn't propagate and execution continues at the next
> statement. For details, see the _Script-terminating errors_ section of
> [about_Error_Handling][07].

Use the `try` block to define a section of a script in which you want
PowerShell to monitor for errors. When an error occurs within the `try` block,
the error is first saved to the `$Error` automatic variable. PowerShell then
searches for a `catch` block to handle the error. If the `try` statement does
not have a matching `catch` block, PowerShell continues to search for an
appropriate `catch` block or `trap` statement in the parent scopes. After a
`catch` block is completed or if no appropriate `catch` block or `trap`
statement is found, the `finally` block is run. If the error cannot be handled,
the error is written to the error stream.

A `catch` block can include commands for tracking the error or for recovering
the expected flow of the script. A `catch` block can specify which error types
it catches. A `try` statement can include multiple `catch` blocks for different
kinds of errors.

A `finally` block can be used to free any resources that are no longer needed
by your script.

`try`, `catch`, and `finally` resemble the `try`, `catch`, and `finally`
keywords used in the C\# programming language.

## Syntax

A `try` statement contains a `try` block, zero or more `catch` blocks, and zero
or one `finally` block. A `try` statement must have at least one `catch` block
or one `finally` block.

The following shows the `try` block syntax:

```powershell
try {<statement list>}
```

The `try` keyword is followed by a statement list in braces. If a terminating
error occurs while the statements in the statement list are being run, the
script passes the error object from the `try` block to an appropriate `catch`
block.

The following shows the `catch` block syntax:

```powershell
catch [[<error type>][',' <error type>]*] {<statement list>}
```

Error types appear in brackets. The outermost brackets indicate the element is
optional.

The `catch` keyword is followed by an optional list of error type
specifications and a statement list. If a terminating error occurs in the `try`
block, PowerShell searches for an appropriate `catch` block. If one is found,
the statements in the `catch` block are executed.

The `catch` block can specify one or more error types. An error type is a
Microsoft .NET Framework exception or an exception that is derived from a .NET
Framework exception. A `catch` block handles errors of the specified .NET
Framework exception class or of any class that derives from the specified
class.

If a `catch` block specifies an error type, that `catch` block handles that
type of error. If a `catch` block does not specify an error type, that `catch`
block handles any error encountered in the `try` block. A `try` statement can
include multiple `catch` blocks for the different specified error types.

The following shows the `finally` block syntax:

```powershell
finally {<statement list>}
```

The `finally` keyword is followed by a statement list that runs every time the
script is run, even if the `try` statement ran without error or an error was
caught in a `catch` statement.

Note that pressing <kbd>CTRL</kbd>+<kbd>C</kbd> stops the pipeline. Objects
that are sent to the pipeline will not be displayed as output. Therefore, if
you include a statement to be displayed, such as "Finally block has run", it
will not be displayed after you press <kbd>CTRL</kbd>+<kbd>C</kbd>, even if the
`finally` block ran.

## Catching errors

The following sample script shows a `try` block with a `catch` block:

```powershell
try { NonsenseString }
catch { "An error occurred." }
```

The `catch` keyword must immediately follow the `try` block or another `catch`
block.

PowerShell does not recognize "NonsenseString" as a cmdlet or other item.
Running this script returns the following result:

```Output
An error occurred.
```

When the script encounters "NonsenseString", it causes a terminating error. The
`catch` block handles the error by running the statement list inside the block.

## USING MULTIPLE CATCH STATEMENTS

A `try` statement can have any number of `catch` blocks. For example, the
following script has a `try` block that downloads `MyDoc.doc`, and it contains
two `catch` blocks:

```powershell
try {
    $wc = New-Object System.Net.WebClient
    $wc.DownloadFile("https://httpbin.org/MyDoc.doc","C:\temp\MyDoc.doc")
} catch [System.Net.WebException],[System.IO.IOException] {
    "Unable to download MyDoc.doc from https://httpbin.org."
} catch {
    "An error occurred that could not be resolved."
}
```

The first `catch` block handles errors of the **System.Net.WebException** and
**System.IO.IOException** types. The second `catch` block does not specify an
error type. The second `catch` block handles any other terminating errors that
occur.

PowerShell matches error types by inheritance. A `catch` block handles errors
of the specified .NET Framework exception class or of any class that derives
from the specified class. The following example contains a `catch` block that
catches a "Command Not Found" error:

```powershell
catch [System.Management.Automation.CommandNotFoundException] {
    "Inherited Exception"
}
```

The specified error type, **CommandNotFoundException**, inherits from the
**System.SystemException** type. The following example also catches a Command
Not Found error:

```powershell
catch [System.SystemException] {"Base Exception" }
```

This `catch` block handles the "Command Not Found" error and other errors that
inherit from the **SystemException** type.

If you specify an error class and one of its derived classes, place the `catch`
block for the derived class before the `catch` block for the general class.

> [!NOTE]
> PowerShell wraps all exceptions in a **RuntimeException** type. Therefore,
> specifying the error type **System.Management.Automation.RuntimeException**
> behaves the same as an unqualified catch block.

## Using traps in a try catch

When a terminating error occurs in a `try` block with a `trap` defined within
the `try` block, even if there is a matching `catch` block, the `trap`
statement takes control.

If a `trap` exists at a higher block than the `try`, and there is no matching
`catch` block within the current scope, the `trap` will take control, even if
any parent scope has a matching `catch` block.

## Accessing exception information

Within a `catch` block, the current error can be accessed using the `$_` or
`$PSItem` automatic variable. The object is of type **ErrorRecord**.

```powershell
try { NonsenseString }
catch {
    Write-Host "An error occurred:"
    Write-Host $_
}
```

Running this script returns the following result:

```Output
An Error occurred:
The term 'NonsenseString' is not recognized as the name of a cmdlet, function,
script file, or operable program. Check the spelling of the name, or if a path
was included, verify that the path is correct and try again.
```

There are additional properties that can be accessed, such as
**ScriptStackTrace**, **Exception**, and **ErrorDetails**. For example, if we
change the script to the following:

```powershell
try { NonsenseString }
catch {
    Write-Host "An error occurred:"
    Write-Host $_.ScriptStackTrace
}
```

The result will be similar to:

```Output
An Error occurred:
at <ScriptBlock>, <No file>: line 2
```

## Freeing resources using finally

To free resources used by a script, add a `finally` block after the `try` and
`catch` blocks. The `finally` block statements run regardless of whether the
`try` block encounters a terminating error. PowerShell runs the `finally` block
before the script terminates or before the current block goes out of scope.

A `finally` block runs even if you use <kbd>CTRL</kbd>+<kbd>C</kbd> to stop the
script. A `finally` block also runs if an `exit` keyword stops the script from
within a `catch` block.

In the following example, the `try` block attempts to download a file to the
`C:\temp` folder. The `catch` blocks handle errors that occur during the
download. The `finally` block disposes of the `WebClient` object and removes
the temporary file if it exists.

```powershell
try {
    $wc = New-Object System.Net.WebClient
    $tempFile = "C:\temp\MyDoc.doc"
    $wc.DownloadFile("https://httpbin.org/MyDoc.doc",$tempFile)
} catch [System.Net.WebException],[System.IO.IOException] {
    "Unable to download MyDoc.doc from https://httpbin.org."
} catch {
    "An error occurred that could not be resolved."
} finally {
    $wc.Dispose()
    if (Test-Path $tempFile) { Remove-Item $tempFile }
}
```

## See also

- [about_Break][01]
- [about_Continue][02]
- [about_Error_Handling][06]
- [about_Scopes][03]
- [about_Throw][04]
- [about_Trap][05]

<!-- link references -->
[01]: about_Break.md
[02]: about_Continue.md
[03]: about_Scopes.md
[04]: about_Throw.md
[05]: about_Trap.md
[06]: about_Error_Handling.md
[07]: about_Error_Handling.md#script-terminating-errors
